# pr-reviewer

./: .dockerignore  .example-env  Dockerfile  README.md  make_and_push_docker.cmd  make_review.py  prepare_repo.py  prepare_test_repo.py  principles.md  pyproject.toml  run_simple_agent.py  task.md
experiments/: dulwich_ex.py
part1/: components.puml  part1.md
pr_reviewer/: simple_reviewer.py
pr_reviewer/git_tools/: git_repo_base.py  git_tools.py
tests/pr_reviewer/git_tools/: test_git_tools.py
